feat: GUI 창 구조 구현
- GUI 창 프레임 구현
- 최소화, 닫기 버튼 구현
- 테스트용 레거시 코드 삭제
- 테스트 코드 test 패키지로 이동

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 group = 'tauruscontrol'
@@ -22,6 +24,15 @@ dependencies {
 java {
     sourceCompatibility = JavaVersion.VERSION_21
     targetCompatibility = JavaVersion.VERSION_21
+}
+
+javafx {
+    version = '21.0.1'
+    modules = ['javafx.controls', 'javafx.fxml']
+}
+
+application {
+    mainClass = 'tauruscontrol.TaurusControlApp'
 }
 
 tasks.withType(JavaCompile) {
